--- a/src/App.css
+++ b/src/App.css
@@ -62,9 +62,9 @@ nav a {
 main {
   width: 60%;
   height: 60vh;
-  margin: 10vh auto;
+  margin: 5vh auto;
 }
-.menu-container {
+.menu-container, .card-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -80,13 +80,63 @@ main {
   filter: grayscale(100%);
 }
 .menu:hover {
-  box-shadow: rgba(247, 243, 243, 0.35) 0px 5px 15px;
+  box-shadow: rgba(255, 255, 255, 0.35) 0px 5px 15px;
 }
 .menu:nth-child(1) {
   background-image: url("https://images.pexels.com/photos/12004890/pexels-photo-12004890.jpeg?cs=srgb&dl=pexels-ahmed-galal-12004890.jpg&fm=jpg");
 }
 .menu:nth-child(2) {
   background-image: url("https://media.istockphoto.com/id/495292220/photo/colorful-cute-toucan-tropical-bird-in-brazilian-amazon-blurred-background.jpg?s=612x612&w=0&k=20&c=UUgfaSISnRJOGQfmzsUQyWIo_RFWHe3JPBmO3K3E6LA=");
+}
+
+.card {
+  width: 200px;
+  height: 250px;
+  margin: 10px 0;
+  border-radius: 5px;
+  background-color: white;
+}
+.card:hover {
+  /* box-shadow: rgba(247, 243, 243, 0.35) 0px 5px 15px; */
+  box-shadow: rgba(156, 161, 166, 0.2) 0px 8px 24px;
+}
+.card-image {
+  width: 100%;
+  height: 70%;
+  background-image: url("https://media.istockphoto.com/id/495292220/photo/colorful-cute-toucan-tropical-bird-in-brazilian-amazon-blurred-background.jpg?s=612x612&w=0&k=20&c=UUgfaSISnRJOGQfmzsUQyWIo_RFWHe3JPBmO3K3E6LA=");
+  background-size: cover;
+  filter: grayscale(100%);
+}
+.card p {
+  text-align: center;
+  margin-bottom: 0;
+}
+.card-buttons {
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  margin: 10px auto 0;
+}
+.card-buttons * {
+  cursor: default;
+}
+.reaction {
+  width: 50%;
+  display: flex;
+  justify-content: space-between;
+}
+.thumbs-up, .thumbs-down {
+  display: flex;
+}
+.material-symbols-outlined:hover {
+  color: gray;
+}
+.close-btn {
+  padding: 1px;
+}
+.close-btn:hover {
+  background-color: #d9d9d9;
+  color: white;
 }
 footer {
   position: fixed;
