--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,7 @@ main {
   justify-content: space-between;
   width: 100%;
   height: 100%;
+  overflow: scroll;
 }
 .menu {
   width: 49%;
@@ -88,7 +89,32 @@ main {
 .menu:nth-child(2) {
   background-image: url("https://media.istockphoto.com/id/495292220/photo/colorful-cute-toucan-tropical-bird-in-brazilian-amazon-blurred-background.jpg?s=612x612&w=0&k=20&c=UUgfaSISnRJOGQfmzsUQyWIo_RFWHe3JPBmO3K3E6LA=");
 }
-
+.search {
+  display: flex;
+  width: 25%;
+  margin: 10px auto 0;
+  padding: 20px;
+  border-bottom: 1px solid white;
+}
+.search-icon {
+  color: white;
+  font-size: 2rem;
+}
+.search input {
+  width: 80%;
+  border: none;
+  color: white;
+  background-color: transparent;
+}
+.search input:focus {
+  outline: none;
+  font-size: 1.5rem;
+}
+::placeholder {
+  color: white;
+  text-align: center;
+  font-style: italic;
+}
 .card {
   width: 200px;
   height: 250px;
@@ -100,10 +126,9 @@ main {
   /* box-shadow: rgba(247, 243, 243, 0.35) 0px 5px 15px; */
   box-shadow: rgba(156, 161, 166, 0.2) 0px 8px 24px;
 }
-.card-image {
+.card img {
   width: 100%;
   height: 70%;
-  background-image: url("https://media.istockphoto.com/id/495292220/photo/colorful-cute-toucan-tropical-bird-in-brazilian-amazon-blurred-background.jpg?s=612x612&w=0&k=20&c=UUgfaSISnRJOGQfmzsUQyWIo_RFWHe3JPBmO3K3E6LA=");
   background-size: cover;
   filter: grayscale(100%);
 }
