--- a/src/App.css
+++ b/src/App.css
@@ -1,46 +1,3 @@
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
- */
 body {
   background-color: #333;
 }
@@ -62,17 +19,16 @@ nav a {
 main {
   width: 60%;
   height: 60vh;
-  margin: 5vh auto;
-}
-.menu-container, .card-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  width: 100%;
-  height: 100%;
+  margin: 5vh auto;
+}
+main.gallery {
+  padding: 5px;
   overflow: scroll;
 }
-.menu {
+.menu-image {
   width: 49%;
   height: 100%;
   background-size: cover;
@@ -80,13 +36,13 @@ main {
   background-repeat: no-repeat;
   filter: grayscale(100%);
 }
-.menu:hover {
-  box-shadow: rgba(255, 255, 255, 0.35) 0px 5px 15px;
+.menu-image:hover {
+  outline: 1px solid white;
 }
-.menu:nth-child(1) {
+.menu-image:nth-child(1) {
   background-image: url("https://images.pexels.com/photos/12004890/pexels-photo-12004890.jpeg?cs=srgb&dl=pexels-ahmed-galal-12004890.jpg&fm=jpg");
 }
-.menu:nth-child(2) {
+.menu-image:nth-child(2) {
   background-image: url("https://media.istockphoto.com/id/495292220/photo/colorful-cute-toucan-tropical-bird-in-brazilian-amazon-blurred-background.jpg?s=612x612&w=0&k=20&c=UUgfaSISnRJOGQfmzsUQyWIo_RFWHe3JPBmO3K3E6LA=");
 }
 .search {
@@ -123,8 +79,7 @@ main {
   background-color: white;
 }
 .card:hover {
-  /* box-shadow: rgba(247, 243, 243, 0.35) 0px 5px 15px; */
-  box-shadow: rgba(156, 161, 166, 0.2) 0px 8px 24px;
+  outline: 1px solid white;
 }
 .card img {
   width: 100%;
