--- a/src/App.css
+++ b/src/App.css
@@ -118,6 +118,11 @@ main.gallery {
   background-color: #d9d9d9;
   color: white;
 }
+h1.not-found {
+  text-align: center;
+  color: white;
+  margin: 20vh auto 0;
+}
 footer {
   position: fixed;
   bottom: 10px;
