--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,33 @@ main.gallery {
   padding: 5px;
   overflow: scroll;
 }
+main.about {
+  width: 60%;
+  height: 60vh;
+  display: flex;
+  margin: 5vh auto;
+  
+}
+.about-image {
+  width: 50%;
+  height: 100%;
+  background-image: url("./assets/images/me.jpeg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  filter: grayscale(100%);
+}
+.about-text {
+  width: 50%;
+  height: 100%;
+}
+.about-text p {
+  width: 50%;
+  text-align: center;
+  font-style: italic;
+  font-size: 2rem;
+  margin: 25% auto 0;
+  color: white;
+}
 .menu-image {
   width: 49%;
   height: 100%;
