creae image folder in src and add about me image

--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@ main.about {
 .about-image {
   width: 50%;
   height: 100%;
-  background-image: url("./assets/images/me.jpeg");
+  background-image: url("./images/me.jpeg");
   background-size: cover;
   background-repeat: no-repeat;
   filter: grayscale(100%);
