add useParams in Gallery.jsx, add animal, bird parameters in nav links

--- a/src/App.css
+++ b/src/App.css
@@ -118,6 +118,9 @@ main.about {
   text-align: center;
   margin-bottom: 0;
 }
+.card small {
+  font-size: .6rem;
+}
 .card-buttons {
   width: 90%;
   display: flex;
