--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 body {
   background-color: #333;
 }
@@ -46,14 +49,17 @@ main.about {
 .about-text {
   width: 50%;
   height: 100%;
-}
-.about-text p {
-  width: 50%;
-  text-align: center;
-  font-style: italic;
-  font-size: 2rem;
-  margin: 10% auto 0;
+  padding: 10% 5%; 
+  overflow: auto;
   color: white;
+}
+.backBtn {
+  color: white;
+  padding-bottom: 10px;
+}
+.backBtn:hover {
+  text-decoration: underline;
+  cursor: pointer;
 }
 .menu-image {
   width: 49%;
@@ -120,6 +126,25 @@ main.about {
 }
 .card small {
   font-size: .6rem;
+  margin: 5px 0 0 5px;
+}
+small.info {
+  display: block;
+  width: 90%;
+  margin: 5px auto 0;
+  overflow: hidden;
+}
+.card a {
+  display: block;
+  margin-top: 5px;
+  text-decoration: none;
+  text-align: center;
+  color: inherit;
+  font-family: inherit;
+  font-size: .5rem;
+}
+.card a:hover {
+  text-decoration: underline;
 }
 .card-buttons {
   width: 90%;
@@ -137,6 +162,9 @@ main.about {
 }
 .thumbs-up, .thumbs-down {
   display: flex;
+}
+.material-symbols-outlined {
+  cursor: pointer;
 }
 .material-symbols-outlined:hover {
   color: gray;
