--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,33 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 * {
   box-sizing: border-box;
 }
 body {
   background-color: #333;
+  font-family: 'Roboto', sans-serif;
 }
 header {
   width: 100%;
+}
+header h1 {
+  color: white;
+  margin: 0;
+  padding: 0;
+  font-weight: 100;
+  text-align: center;
+}
+.zoo-text {
+  font-size: 3.5rem;
+  font-size: 900;
+  margin-right: 0;
+}
+.zoo-text span.square-dot {
+  font-size: 1.5rem;
+  margin: 0 10px 0 -10px;
+}
+.monochrome-text  {
+  font-size: 2rem;
+  letter-spacing: 2px;
 }
 nav {
   display: flex;
@@ -16,8 +38,11 @@ nav {
 nav a {
   text-decoration: none;
   font-weight: 100;
-  font-family: 'Montserrat', sans-serif;
+  /*font-family: 'Montserrat', sans-serif; */
   color: white;
+}
+nav a:hover {
+  border-bottom: 2px solid white;
 }
 main {
   width: 60%;
@@ -49,7 +74,7 @@ main.about {
 .about-text {
   width: 50%;
   height: 100%;
-  padding: 10% 5%; 
+  padding: 5%; 
   overflow: auto;
   color: white;
 }
