add image carousel on home page

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,42 @@ nav a {
 nav a:hover {
   border-bottom: 2px solid white;
 }
+.home {
+  width: 1250px;
+  height: 60vh; 
+  display: flex;
+  align-items: center; 
+  justify-content: center;
+  margin: 10vh auto;
+}
+
+.carousel {
+  overflow-x: scroll;
+  scroll-behavior: smooth;
+  white-space: nowrap;
+  padding: 10px;
+}
+.carousel::-webkit-scrollbar {
+  display: none;
+}
+.carousel img {
+  width: 50%;
+  padding: 10px;
+  filter: grayscale(100%); 
+  transition: transform 0.5s;
+}
+.carousel img:hover {
+  filter: grayscale(0);
+  cursor: pointer;
+  transform: scale(1.1);
+}
+.ios-arrow-icon {
+  color: white;
+  padding: 10px;
+}
+.ios-arrow-icon:hover {
+  background: rgba(255, 255, 255, 0.1);
+}
 main {
   width: 60%;
   height: 60vh;
@@ -74,23 +110,7 @@ main.about {
   text-decoration: underline;
   cursor: pointer;
 }
-.menu-image {
-  width: 49%;
-  height: 100%;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  filter: grayscale(100%); 
-}
-.menu-image:hover {
-  outline: 1px solid white;
-}
-.menu-image:nth-child(1) {
-  background-image: url("https://images.pexels.com/photos/12004890/pexels-photo-12004890.jpeg?cs=srgb&dl=pexels-ahmed-galal-12004890.jpg&fm=jpg");
-}
-.menu-image:nth-child(2) {
-  background-image: url("https://media.istockphoto.com/id/495292220/photo/colorful-cute-toucan-tropical-bird-in-brazilian-amazon-blurred-background.jpg?s=612x612&w=0&k=20&c=UUgfaSISnRJOGQfmzsUQyWIo_RFWHe3JPBmO3K3E6LA=");
-}
+
 .search {
   display: flex;
   width: 25%;
