--- a/src/App.css
+++ b/src/App.css
@@ -141,6 +141,7 @@ main.about {
   width: 200px;
   height: 250px;
   margin: 10px 0;
+  padding: 5px 5px 10px 5px;
   border-radius: 5px;
   background-color: white;
 }
@@ -206,7 +207,7 @@ small.info {
   padding: 1px;
 }
 .close-btn:hover {
-  background-color: #d9d9d9;
+  background-color: #373737;
   color: white;
 }
 h1.not-found {
