--- a/src/App.css
+++ b/src/App.css
@@ -154,19 +154,8 @@ main.about {
   background-size: cover;
   filter: grayscale(100%); 
 }
-.card p {
-  text-align: center;
-  margin-bottom: 0;
-}
-.card small {
-  font-size: .6rem;
-  margin: 5px 0 0 5px;
-}
-small.info {
-  display: block;
-  width: 90%;
-  margin: 5px auto 0;
-  overflow: hidden;
+.card img:hover {
+  filter: grayscale(0);
 }
 .card a {
   display: block;
@@ -175,7 +164,6 @@ small.info {
   text-align: center;
   color: inherit;
   font-family: inherit;
-  font-size: .5rem;
 }
 .card a:hover {
   text-decoration: underline;
